[package]
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "durandal_bsp"
version = "0.1.0"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/durandal_bsp"
description  = "Board support package for the Holybro Durandal flight controller"

[dependencies]
embedded-hal = "0.2.3"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
# stm32 family specialization:
stm32h7 = { version = "0.10.0", features = ["stm32h743"] }
stm32h7xx-hal = { version = "0.4.0", features = ["stm32h743", "rt"] }
#stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal", features = ["stm32h743", "rt"] }
#stm32h7xx-hal = { path = "../stm32h7xx-hal",  features = ["stm32h743", "rt"] }

[dev-dependencies]
panic-rtt-core = "0.1.1"
shared-bus = {version = "0.1.4", features = ["cortexm"] }

# sensors
ms5611-spi =  { git = "https://github.com/tstellanova/ms5611-ehal" }
#ms5611-spi = { path = "../ms5611-ehal" }

ist8310 =  { git = "https://github.com/tstellanova/ist8310" }
#ist8310 = { path = "../ist8310"}

icm20689 =  { git = "https://github.com/tstellanova/icm20689" }
#icm20689 = { path = "../icm20689"}

bmi088 =  { git = "https://github.com/tstellanova/bmi088" }
#bmi088 = { path = "../bmi088"}

ublox-core =  { git = "https://github.com/tstellanova/ublox-core" }
#ublox-core = { path = "../ublox-core"}

# rgbled
#tca62724fmg = { path = "../tca62724fmg"}
tca62724fmg =  { git = "https://github.com/tstellanova/tca62724fmg" }

# flash memory
#spi-memory = { path = "../spi-memory"}
spi-memory = { git = "https://github.com/tstellanova/spi-memory" }

# embedded graphics support:
ssd1306 = "0.2.6"
embedded-graphics = "0.4.9"
arrayvec = {version = "0.5.1", default-features = false}


